<resources>
    <string name="app_name">Football Stats Quiz</string>

    <string name="sound">Sound</string>

    <!--    Botones-->
    <string name="btnComenzar">START GAME</string>
    <string name="btnRecords">BEST SCORES</string>
    <string name="options">OPCIONES</string>
    <string name="goToRegister">Not registred yet</string>
    <string name="goToLogin">I already have an account</string>
    <string name="reset_filters">Reset filters</string>

    <!--    Estadisticas-->
    <string name="goles_anotados">Goals</string>
    <string name="asistencias">Assists</string>
    <!--    <string name="pases_completados">Completed passes</string>-->
    <!--    <string name="paradas">Saves</string>-->
    <!--    <string name="tarjetas_amarillas">Yellow cards</string>-->
    <!--    <string name="tarjetas_rojas">Red cards</string>-->
    <!--    <string name="tarjetas">Cards</string>-->
    <!--    <string name="penaltis">Penalties</string>-->
    <!--    <string name="minutos">Mins</string>-->
    <!--    <string name="goles_falta">Free kick goals</string>-->
    <!--    <string name="entradas_exitosas">Won tackles</string>-->
    <!--    <string name="faltas">Fouls</string>-->

    <!--    Ligas-->
    <!--    <string name="liga_santander">Liga Santander</string>-->
    <!--    <string name="liga_smartbank">Liga Smartbank</string>-->
    <!--    <string name="liga_1_2_3">Liga 1-2-3</string>-->
    <!--    <string name="liga_femenina">Primera División Femenina</string>-->
    <string name="liga_santander">La Liga Santander</string>
    <string name="liga_smartbank">La Liga Smartbank</string>
    <string name="premier">Premier League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="league1">Ligue 1</string>
    <string name="seriea">Serie A</string>

    <!--    Titulos menú-->
    <string name="liga">League</string>
    <string name="estadistica">Stat</string>
    <string name="temporada">Season</string>

    <!--    General-->
    <string name="misc">Mix</string>
    <string name="total">Total</string>
    <string name="seleccionar_avatar">Choose your avatar</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="back_to_menu">BACK TO MENU</string>
    <string name="game_finished">Game finished</string>
    <string name="new_record">New Record!</string>
    <string name="record">Record: </string>
    <string name="puntuacion">Points: </string>
    <string name="actualizar">UPDATE</string>
    <string name="codigo">ENTER YOUR CODE</string>

    <!--    Textos Menu Lateral-->
    <string name="home_item">Home</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_contact_with_us">Contact us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">My Profile</string>

    <string name="nav_help">Help</string>
    <string name="nav_home">Home</string>
    <string name="nav_login">Login</string>
    <string name="nav_register">Sign in</string>
    <string name="nav_logout">Logout</string>
    <string name="about_us">Para cualquier problema, duda o sugerencia puedes contactar con nosotros a traves del siguiente correo electrónico:\bowlofricedev@gmail.com</string>
    <string name="sign_up_google">Registrarse con Google</string>
    <string name="login">Inicia Sesión</string>
    <string name="no_puntuaciones">No hay puntuaciones</string>
    <string name="enviar_mail">Enviar correo</string>
    <string name="contact_mail">Puedes contactar con nosotros enviando un mail a bowlofricedev@gmail.com</string>
    <string name="name">Name</string>
    <string name="logInGoogle">Log in with Google</string>
    <string name="nav_cuenta">Account</string>


    <!--    Textos Toasts-->
    <string name="config_updated">CONFIG UPDATED</string>
    <string name="press_back">Press back again to exit</string>
    <string name="sin_conexion">Check your internet connection and try again</string>
    <string name="login_correcto">Welcome again </string>
    <string name="login_incorrecto">Log in error</string>
    <string name="registro_correcto">Sign Up Succesful</string>

    <string name="no_data_found">No players founds with this params</string>

    <!--    Registro-->
    <string name="user_registred">user registred</string>

    <!--    Errores al registrarse-->
    <string name="already_registred">email already registred</string>
    <string name="invalid_email">invalid email</string>
    <string name="passwords_not_match">passwords not match</string>
    <string name="password_characters">password must have six characters at least</string>
    <string name="error_ocurred">error</string>

    <!--Textos Dialogs-->
    <string name="introduce_user_name">Type your username here</string>
    <string name="introduce_email">Type your email here</string>
    <string name="introduce_passwd">Type your password here</string>
    <string name="introduce_passwd2">Confirm your password here</string>


    <string name="empezar_partida">Start Game</string>
    <string name="registrarse">Sign Up</string>
    <string name="sugerencia_registro">You need to be signed in to save your game records ☹️</string>

    <!--    Textos tabs-->
    <string name="tab_reglas">GAME RULES</string>
    <string name="tab_glosario">GLOSSARY</string>
    <string name="tab_aboutUs">ABOUT US</string>

    <!--    Textos help-->
    <string name="help_paragraph">In the main menu you can choose the game parameters you want among:</string>
    <string name="help_competition">1 - Type of Competition: European Leagues, International Clubs or National Teams</string>
    <string name="help_league">2 - League: Available competitions will be enabled in order to the selected type of competition</string>
    <string name="help_season">3 - Season: Available seasons will be enabled in order to the last two parameters</string>
    <string name="help_stat">4 - Stat</string>

    <string name="help_paragraph2">Once the game is started, you have to click on the player who had a better stat in the selected season. The stat and season are indicated on the top of the screen.</string>
    <string name="help_paragraph3">You have three lives, if you click on the wrong player, you\'ll lose a live. If you make ten hits in a row, you will get a new live up to three</string>
    <string name="help_forMoreInfo">For more information please visit the following links:</string>


    <!--    Textos glosario-->
    <string name="glossary_paragraph">On the top of the game screen you will find the abbreviated stat category asked. \nThe abbreviations are the following:</string>

    <!--    Textos about us-->
    <string name="aboutUs_paragraph">All the statistics, names and images are property of their organizations.</string>

    <string-array name="ESTADISTICAS">

        <item>@string/goles_anotados</item>
        <item>@string/asistencias</item>
        <item>Mix</item>

        <!--        <item>@string/pases_completados</item>-->
        <!--        <item>@string/goles_falta</item>-->
        <!--        <item>@string/penaltis</item>-->
        <!--        <item>@string/minutos</item>-->
        <!--        <item>@string/paradas</item>-->
        <!--        <item>@string/entradas_exitosas</item>-->
        <!--        <item>@string/faltas</item>-->
        <!--        <item>@string/tarjetas_amarillas</item>-->
        <!--        <item>@string/tarjetas</item>-->

    </string-array>

    <string-array name="LIGAS">
        <item>@string/liga_santander</item>
        <item>@string/liga_smartbank</item>
        <item>@string/bundesliga</item>
        <item>@string/premier</item>
        <item>@string/seriea</item>
        <item>@string/league1</item>


    </string-array>

    <string-array name="COMPETICIONES">
        <item>Ligas Europeas</item>
        <item>Clubes Internacionales</item>
        <item>Selecciones Internacionales</item>


    </string-array>

    <string-array name="COMPETICIONES_INTERNACIONALES_CLUB">
        <item>UEFA Champions League</item>
        <item>Europa League</item>

    </string-array>

    <string-array name="SELECCIONES_INTERNACIONALES">
        <item>World Cup 2018</item>
        <item>Euro 2016</item>
        <item>Euro 2012</item>
        <item>Euro 2008</item>
        <item>Euro 2004</item>

    </string-array>


    <!--    <string-array name="LIGAS_OLD">-->
    <!--        <item>@string/liga_santander</item>-->
    <!--        <item>@string/liga_1_2_3</item>-->
    <!--    </string-array>-->


    <!--    <string-array name="TEMPORADAS">-->
    <!--        <item>19/20</item>-->
    <!--        <item>18/19</item>-->
    <!--        <item>17/18</item>-->
    <!--        <item>16/17</item>-->
    <!--        <item>15/16</item>-->
    <!--        <item>14/15</item>-->
    <!--    </string-array>-->

    <string-array name="TEMPORADAS">
        <item>2019-2020</item>
        <item>2018-2019</item>
        <item>2017-2018</item>
        <item>2016-2017</item>
        <item>2015-2016</item>
        <item>2014-2015</item>
        <item>2013-2014</item>
        <item>2012-2013</item>
        <item>2011-2012</item>
        <item>2010-2011</item>
        <item>2009-2010</item>
        <item>2008-2009</item>
        <item>2007-2008</item>
        <item>2006-2007</item>
        <item>2005-2006</item>
        <item>2004-2005</item>
        <item>2003-2004</item>
        <item>@string/total</item>
        <item>@string/misc</item>

    </string-array>

    <string-array name="TEMPORADAS_SELECCION">
        <item>@string/misc</item>

    </string-array>

    <string name="banner_prueba" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="temporizador_off">TIMER OFF</string>
    <string name="aviso_temporizador">If timer is off your game record won\'t be saved</string>
    <string name="busca_jugador">Search Player</string>
</resources>
