<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.laligastatsquiz.laligastatsquiz.fragments.help.FragmentoHelpReglas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grassbg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/tab_reglas"
                android:textColor="#ffffff"
                android:textSize="26dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/fsqtransparentemin"

                />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"

            android:text="@string/help_paragraph"
            android:textAlignment="inherit"
            android:textColor="#ffffff"
            android:textSize="18dp"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"

            android:text="@string/help_competition"
            android:textAlignment="inherit"
            android:textColor="#ffffff"
            android:textSize="18dp"


            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/help_league"
            android:textAlignment="inherit"
            android:textColor="#ffffff"
            android:textSize="18dp"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/help_season"
            android:textAlignment="inherit"
            android:textColor="#ffffff"


            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/help_stat"
            android:textAlignment="inherit"
            android:textColor="#ffffff"
            android:textSize="18dp"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/help_paragraph2"
            android:textAlignment="inherit"
            android:textColor="#ffffff"


            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/help_paragraph3"
            android:textAlignment="inherit"


            android:textColor="#ffffff"
            android:textSize="18dp" />

    </LinearLayout>


</ScrollView>