<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.FragmentoLogin"
    android:background="@drawable/grassbg">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/fsqtransparentemin"
            android:layout_gravity="center"/>

<!--        <TextView-->
<!--            android:paddingLeft="15dp"-->
<!--            android:id="@+id/textView"-->
<!--            android:textColor="@color/material_black"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/introduce_email"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="18sp" />-->

        <EditText
            android:paddingLeft="15dp"
            android:id="@+id/txtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#ffffff"
            android:inputType="textPersonName"
            android:hint="@string/introduce_email"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:paddingLeft="15dp"

            android:id="@+id/txtLoginPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:hint="@string/introduce_passwd"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txtErrorLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#FFEB3B"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/nav_login" />

        <Button
            android:id="@+id/btnLogInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F4F4"
            android:drawableStart="@drawable/googleg_standard_color_18"

            android:paddingLeft="20dp"
            android:text="@string/logInGoogle" />

        <TextView
            android:id="@+id/txtGoToRegister"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/goToRegister"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />


    </LinearLayout>

</FrameLayout>