<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grassbg"
    android:orientation="vertical"
    android:weightSum="100">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/doncic"
            app:civ_border_color="#ffffff"
            app:civ_border_width="4dp"
            app:civ_fill_color="@color/colorPrimary" />
        <Button
            android:id="@+id/txtCambiaAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_button"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/seleccionar_avatar"
            android:textColor="@color/colorBlanco"
            android:textSize="16dp"

            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/introduce_user_name"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUserNameOptions"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:text="@string/name"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCode"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/codigo"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#8CFFFFFF" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSetOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="#ffffff"
            android:text="@string/actualizar" />

        <LinearLayout
            android:id="@+id/lnprofilead"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-5187656956047852/8312138086" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>